# PaCE-Man

./: .gitignore  README.md
Executables/: pacman_client_executable.rar
PaCE Man Client/: build.xml
PaCE Man Client/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
PaCE Man Client/nbproject/private/: private.properties  private.xml
PaCE Man Client/src/Main/: main.java
PaCE Man Client/src/app/: FakeObserverServer.java  FakePlayerServer.java  GameBoard.java  Menu.java  ObserverView.java  ObserverWindow.java  PaCEManClient.java  PlayerView.java  PlayerWindow.java
PaCE Man Client/src/clientViews/: ObserverView.java  PlayerView.java
PaCE Man Client/src/commands/: ChangeGhostsSpeedCommand.java  Command.java  CreateFruitCommand.java  CreateGhostCommand.java  CreatePillCommand.java  IncrementScoreCommand.java  PlacePillCommand.java
PaCE Man Client/src/connector/: ConnectionManager.java  MessageParser.java
PaCE Man Client/src/data/: Constants.java  Direction.java  GameData.java  GameDatabase.java  GameState.java  GhostColor.java  GhostPathData.java  ObserverPackage.java  Position.java
PaCE Man Client/src/fakeServers/: FakeObserverServer.form  FakeObserverServer.java  FakePlayerServer.form  FakePlayerServer.java
PaCE Man Client/src/main/: Direction.java  GameBoard.java
PaCE Man Client/src/mainProcess/: ClientObserver.java  (+1 more)
PaCE Man Server/: Admin.c  Admin.h  CMakeLists.txt  Constants.h  Game Structs.c  Game Structs.h  Game.c  Game.h  Logic.c  Logic.h  MessageParser.c  MessageParser.h  Server.c  Server.h  main.c
(+21 files in other folders)
